# ICS1-2024-Preparation

./: .gitattributes
drafts/bomb-report/: bomb汇报.pptx  new_question.md
drafts/bomb-report/bomb_phase_test/: phase2ZIP  phase2ZIP.c  phase2ZIP_asm.txt  phase6KMP  phase6KMP.c  phase6KMP_asm.txt  phase7MAZE  phase7MAZE.c  phase7MAZE_asm.txt
drafts/exercise-classes/debugging/: ExerciseClass-Debugging.typ
drafts/git-report/: git汇报.pptx
drafts/github-submission-report/: slides.md
drafts/link-lab/: LinkLab-Draft.typ
drafts/link-lab/fle/: .gitignore  CMakeLists.txt  README.md  main.cpp
drafts/link-lab/fle/demo/: Makefile
github-submission-report/: package.json  pnpm-lock.yaml  slides.md
resources/王晶-课件/: 1-bits-bops.pptx  11-optimization.pptx  5-machine-intro.ppt  7-machine-control.pptx  8-machine-procedure.pptx  9-machine-data.pptx
resources/王晶的课件/: 10-machine-advanced.pptx  14-Linking-Basic Concepts-讲课用.pptx  2-integers.pptx  3-float.pptx  6-machine-basics.ppt
resources/陆春林-计算机组成MOOC/: 00-00-模板.pptx  00-00-每讲头尾公用.pptx
